<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView 
         android:text="@string/texte"
         android:id="@+id/title"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" 
         android:textColor="@android:color/holo_blue_bright"  
        />
    <Button 
        android:text="@string/newfiche"
        android:id="@+id/newfiche"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        />
    <Button 
        android:text="@string/editfiche"
        android:id="@+id/editsavefiche"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        />
    <Button 
        android:text="@string/suppfiche"
        android:id="@+id/suppsavefiche"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        />
   <Button 
        android:text="@string/quit"
        android:id="@+id/quitapp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        
        />
    

</LinearLayout>